--- a/UART-int.ioc
+++ b/UART-int.ioc
@@ -7,12 +7,13 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP1=I2C3
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -21,38 +22,45 @@ Mcu.Pin10=PA4
 Mcu.Pin11=PA5
 Mcu.Pin12=PA6
 Mcu.Pin13=PA7
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PD12
-Mcu.Pin17=PD13
-Mcu.Pin18=PD14
-Mcu.Pin19=PD15
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB2
+Mcu.Pin18=PB10
+Mcu.Pin19=PD12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PB3
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin20=PD13
+Mcu.Pin21=PD14
+Mcu.Pin22=PD15
+Mcu.Pin23=PC9
+Mcu.Pin24=PA8
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PB3
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=26
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C3_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -112,6 +120,12 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Mode=I2C
+PA8.Signal=I2C3_SCL
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=SEG_STB
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -168,6 +182,16 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=SEG_CLK
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=SEG_DIO
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=LD4 [Green Led]
 PD12.GPIO_PuPd=GPIO_NOPULL
@@ -211,6 +235,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=true
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -239,7 +264,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
